# ImPlaneIA

./: .gitignore  LICENSE  NOTES.md  README.md  gpinrm_etc.py  setup.cfg  setup.py
example_data/example_niriss/: c_binary_s198.3_p143.9_cr0.01__nispsf_jit7.0_F480M_15x_ov__00.fits  c_binary_s198.3_p143.9_cr0.01__nispsf_jit7.0_F480M_15x_ov__00_lgpp_short.fits  t_binary_s198.3_p143.9_cr0.01__nispsf_jit7.0_F480M_15x_ov__00.fits  t_binary_s198.3_p143.9_cr0.01__nispsf_jit7.0_F480M_15x_ov__00_lgpp_short.fits
example_data/noise/: c_disk3_4__PSF_MASK_NRM_F430M_x11_0.82_ref__00.fits  t_disk_small2_0__PSF_MASK_NRM_F430M_x11_0.82_ref__00.fits
f430_data/: ccube00.fits  ccube01.fits  ccube02.fits  ccube03.fits  tcube00.fits  tcube01.fits  tcube02.fits  tcube03.fits
notebooks/: GPI_NRM_tutorial_spect.ipynb  NIRISS_AMI_tutorial.ipynb  NIRISS_AMI_tutorial.py
nrm_analysis/: InstrumentData.py  __init__.py  find_affine2d_parameters.py  nrm_core.py
nrm_analysis/fringefitting/: LG_Model.py  analyticnrm2.py  hexee.py  hextransformEE.py  leastsqnrm.py  subpix.py  utility_classes.py
nrm_analysis/misctools/: glue_js_oifits.py  mask_definitions.py  matrixDFT.py  utils.py  write_oifits.py
nrm_analysis/modeling/: binarymodel.py  multimodel.py
nrm_analysis/tests/: test_affine2d_makemodel_rot.py  test_affine2d_rot_psf.py  test_affine2d_xyscale_psf.py  test_centerpoint.py  test_find_affine2d_parameters.py  test_find_pass_affine.py  test_fringe_fitting.py  test_pitch.py  test_psf_offset.py
rundir/: dev.py
tests/: test_fringe_fitting.py
