[metadata]
package_name = nrm_analysis
description = Reduce aperture masking images to fringe observables.
long_description = A package that contains classes and functions to reduce and analyze aperture masking data.
author = Alexandra Greenbaum, Anand Sivaramakrishnan, Johannes Sahlmann, Deepashri Thatte
author_email = azgreenb@umich.edu
license = MIT
edit_on_github = False
github_project = https://github.com/agreenbaum/ImPlaneIA
description-file = README.md
url =  https://github.com/agreenbaum/ImPlaneIA
homepage = 'https://github.com/agreenbaum/'

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build relic

[flake8]
# See http://flake8.pycqa.org/en/latest/user/configuration.html

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
